object bar gap fix

--- a/src/App/StudioPage/ObjectsBar/ObjectsBar.scss
+++ b/src/App/StudioPage/ObjectsBar/ObjectsBar.scss
@@ -6,7 +6,7 @@
     width: 100%;
     display: grid;
     grid-auto-flow: column;
-    grid-gap: 2em;
+    grid-gap: 5em;
     align-items: center;
     padding-left: 2em;
     grid-auto-columns: max-content;
